--- a/index.css
+++ b/index.css
@@ -92,6 +92,15 @@ body {
   padding-left: 2px;
 }
 
+.cellSymbol {
+  position: absolute;
+  right: 4px;
+  top: 3px;
+  width: 8px;
+  height: 3px;
+  background-color: black;
+}
+
 #att {
   display: inline-block;
   text-align: right;
