--- a/index.css
+++ b/index.css
@@ -27,6 +27,7 @@ body {
 }
 
 dialog {
+  background-color: var(--info-bg);
   border-radius: 10px;
   box-shadow: 6px 6px 5px hsla(0, 0%, 0%, 0.5);
 }
@@ -38,7 +39,7 @@ dialog {
 
 #helpTop {
   display: grid;
-  grid-template-columns: 1fr 100px;
+  grid-template-columns: 1fr 150px;
 }
 
 #helpTitle {
@@ -48,7 +49,7 @@ dialog {
 }
 
 #imgHelp {
-  width: 100px;
+  width: 150px;
 }
 
 #infoBox {
@@ -179,4 +180,25 @@ dialog {
   text-align: right;
   font-size: xx-small;
   filter: opacity(0.2);
+}
+
+#winContainer {
+  font-family: "Borel", Arial;
+  font-size: 10pt;
+  background-color: var(--cell-bg-even);
+}
+
+#winImg {
+  width: 450px;
+}
+
+.confetti {
+  position: fixed;
+  top: 0;
+  left: 0;
+  pointer-events: none;
+  opacity: 0;
+  width: 7px;
+  height: 7px;
+  background-color: red;
 }
