--- a/index.css
+++ b/index.css
@@ -75,6 +75,11 @@ dialog {
   margin-top: 5px;
 }
 
+#infoThreshSlider {
+  position: relative;
+  top: 4px;
+}
+
 #infoProgressContainer {
   width: 100%;
   height: 12px;
@@ -173,6 +178,19 @@ dialog {
   width: 8px;
   height: 3px;
   background-color: black;
+}
+
+.cellRun {
+  position: absolute;
+  right: 3px;
+  bottom: 4px;
+  width: 0px;
+  height: 0px;
+  padding: 0px;
+  background-color: transparent;
+  border-width: 6px;
+  border-style: solid;
+  border-color: transparent black transparent black;
 }
 
 #att {
