--- a/index.css
+++ b/index.css
@@ -22,14 +22,14 @@ body {
   letter-spacing: -0.5pt;
 }
 
-.blur2px {
-  filter: blur(2px);
-}
-
 dialog {
   background-color: var(--info-bg);
   border-radius: 10px;
   box-shadow: 6px 6px 5px hsla(0, 0%, 0%, 0.5);
+}
+
+dialog::backdrop {
+  backdrop-filter: blur(2px);
 }
 
 #helpWelcome {
@@ -77,7 +77,7 @@ dialog {
 
 #infoNext {
   display: inline-block;
-  width: 7.5em;
+  min-width: 7.5em;
 }
 
 #infoNextCheck {
@@ -156,6 +156,7 @@ dialog {
   position: absolute;
   height: 100%;
   width: 0%;
+  transition: width 0.5s linear 0s;
 }
 
 .cellProgressEven {
