--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
   --cell-bg-even: #FFA6C3;
   --cell-bg-odd: #9ACD8C;
   --cell-bg-empty: hsl(0, 0%, 83%);
-  --cell-progress: yellow;
+  --cell-progress: hsl(340, 100%, 83%);
 }
 
 * {
